# Formula-1

./: README.md  pyproject.toml  setup.sh
src/formula_1/: __init__.py
